Fix on the mobile off-canvas menu
Now it doesn't cover the whole screen when active

--- a/sass/_landing-section.scss
+++ b/sass/_landing-section.scss
@@ -1,6 +1,11 @@
 #homepage .e-logo img { 
-    max-width: 300px; 
-    margin-top: 60px;
+    max-width: 200px; 
+    margin-top: 80px;
+
+    @include breakpoint($desktop) {
+        max-width: 300px; 
+        margin-top: 60px;
+    }
 }
 
 
